# jimlang

./: .ghc.environment.x86_64-darwin-8.4.4  README.md  project.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.4.4/: package.cache  project-0.1.0.0-inplace.conf
